--- a/FutureStar/FutureStar_App/templates/layouts/sidebar.html
+++ b/FutureStar/FutureStar_App/templates/layouts/sidebar.html
@@ -1,6 +1,6 @@
 {% load static %} {% load sass_tags %}
 <!-- Font Awesome-->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> -->
 <!-- Page Sidebar Start-->
 <div class="sidebar-wrapper" sidebar-layout="stroke-svg">
    <div>
@@ -44,11 +44,32 @@
                      <span class="lan">Dashboard</span>
                   </a>
                </li>
-               <li class="sidebar">
-                  <a class="sidebar-link sidebar-title link-nav" href="{% url 'System_Settings' %}">
-                     <i class="fa fa-gear"></i>&nbsp;&nbsp;&nbsp; <span class="lan">System Settings</span>
+
+               <!-- User Menu -->
+               <li class="sidebar-list">
+                  <a class="sidebar-link sidebar-title" href="#">
+                     <svg class="stroke-icon">
+                        <use href="{% static 'assets/svg/icon-sprite.svg'%}#stroke-user"></use>
+                     </svg>
+                     <svg class="fill-icon">
+                        <use href="{% static 'assets/svg/icon-sprite.svg'%}#fill-user"></use>
+                     </svg>
+                     <span class="lan">User</span>
                   </a>
+                  <ul class="sidebar-submenu">
+                     <li>
+                        <a href="{% url 'user_list' %}">User List</a>
+                     </li>
+                     <li>
+                        <a href="{% url 'role_list' %}">User Roles</a>
+                     </li>
+                     <li>
+                        <a href="{% url 'category_list' %}">User Category</a>
+                     </li>
+                  </ul>
                </li>
+               
+               <!-- 
                <li class="sidebar">
                   <a class="sidebar-link sidebar-title link-nav" href="{% url 'user_list' %}">
                      <svg class="stroke-icon">
@@ -67,7 +88,7 @@
                      <i class="fa fa-layer-group"></i>&nbsp;&nbsp;&nbsp; <span class="lan">Category</span>
                   </a>
                   </a>
-               </li>
+               </li> -->
                <li class="sidebar-list">
                   <a class="sidebar-link sidebar-title" href="#">
                      <svg class="stroke-icon">
@@ -99,6 +120,16 @@
                      </li>
                   </ul>
                </li>
+               <li class="sidebar">
+                  <a class="sidebar-link sidebar-title link-nav" href="{% url 'System_Settings' %}">
+                     <i class="icon-settings"> </i> &nbsp;&nbsp;&nbsp; <span class="lan">System Settings</span>
+                  </a>
+               </li>
+               <!-- <li class="sidebar">
+                  <a class="sidebar-link sidebar-title link-nav" href="{% url 'System_Settings' %}">
+                     <i class="icon-settings"></i>&nbsp;&nbsp;&nbsp; <span class="lan">System Settings</span>
+                  </a>
+               </li> -->
             </ul>
          </div>
          <div class="right-arrow" id="right-arrow">
