--- a/FutureStar/FutureStar_App/templates/login.html
+++ b/FutureStar/FutureStar_App/templates/login.html
@@ -8,21 +8,21 @@
     <div class="col-12 p-0">    
       <div class="login-card">
         <div>
-          <div><a class="logo" href="#"><img class="img-fluid for-light" src="{% static 'assets/images/logo/logo.png'%}" alt="loginpage"><img class="img-fluid for-dark" src="{% static 'assets/images/logo/logo_dark.png'%}" alt="loginpage"></a></div>
+          <div><a class="logo" href="#"><img class="img-fluid for-light" src="{{  header_logo  }}" alt="loginpage"><img class="img-fluid for-dark" src="{% static 'assets/images/logo/logo_dark.png'%}" alt="loginpage"></a></div>
           <div class="login-main"> 
-            <form class="theme-form" method='post'>
+            <form class="theme-form" method='post' novalidate>
                 {% csrf_token %}
               <h4>Sign in to account</h4>
               <p>Enter your email & password to login</p>
-              <span>username:test    password:test12345</span>
+              
               <div class="form-group">
-                <label class="col-form-label">Username</label>
-                {{ form.username|add_class:'form-control' }}
+                <label class="col-form-label">Email</label>
+                {{ form.email }}
               </div>
               <div class="form-group">
                 <label class="col-form-label">Password</label>
                 <div class="form-input position-relative">
-                    {{ form.password|add_class:'form-control' }}
+                    {{ form.password }}
                 </div>
               </div>
               <div class="form-group mb-0">
@@ -34,12 +34,8 @@
                   <button class="btn btn-primary btn-block w-100" type="submit">Sign in</button>
                 </div>
               </div>
-              <h6 class="text-muted mt-4 or">Or Sign in with</h6>
-              <div class="social mt-4">
-                <div class="btn-showcase"><a class="btn btn-light" href="https://www.linkedin.com/login" target="_blank"><i class="txt-linkedin" data-feather="linkedin"></i> LinkedIn </a><a class="btn btn-light" href="https://twitter.com/login?lang=en" target="_blank"><i class="txt-twitter" data-feather="twitter"></i>twitter</a><a class="btn btn-light" href="https://www.facebook.com/" target="_blank"><i class="txt-fb" data-feather="facebook"></i>facebook</a></div>
               </div>
-              </div>
-              <p class="mt-4 mb-0 text-center">Don't have an account? <a class="ms-2" href="signup_home">Create Account</a></p>
+              <!-- <p class="mt-4 mb-0 text-center">Don't have an account? <a class="ms-2" href="signup_home">Create Account</a></p> -->
             </form>
           </div>
         </div>
@@ -47,10 +43,4 @@
     </div>
   </div>
 
-{% endblock %}
-{% block scriptscontent %}
-<!-- <script>
-  document.getElementById('id_username').value = 'test';
-  document.getElementById('id_password').value = 'test12345';
-</script> -->
 {% endblock %}
