--- a/FutureStar/FutureStar_App/templates/layouts/header.html
+++ b/FutureStar/FutureStar_App/templates/layouts/header.html
@@ -50,7 +50,7 @@
         <div class="nav-right col-xxl-7 col-xl-6 col-md-7 col-8 pull-right right-header p-0 ms-auto">
             <ul class="nav-menus">
                 <!-- Language Dropdown -->
-                <li class="language-nav">
+                <!-- <li class="language-nav">
                     <div class="translate_wrapper">
                         <div class="current_lang">
                             <div class="lang">
@@ -71,7 +71,7 @@
                             <div class="lang" data-value="ae"><i class="flag-icon flag-icon-ae"></i><span class="lang-txt">لعربية <span> (ae)</span></span></div>
                         </div>
                     </div>
-                </li>
+                </li> -->
 
                 <!-- Search Icon -->
                 <!-- <li><span class="header-search">
@@ -142,7 +142,7 @@
                   <li><a href="{%url 'user_profile'%}"><i data-feather="user"></i><span>Account </span></a></li>
                   <!-- <li><a href="#"><i data-feather="mail"></i><span>Inbox</span></a></li>
                   <li><a href="#"><i data-feather="file-text"></i><span>Taskboard</span></a></li> -->
-                  <li><a href="{% url 'edit_profile' %}"><i data-feather="settings"></i><span>Update Profile</span></a></li>
+                  <!-- <li><a href="{% url 'edit_profile' %}"><i data-feather="settings"></i><span>Update Profile</span></a></li> -->
                   <li><a href="{% url 'logout' %}"><i data-feather="log-in"> </i><span>Log-out</span></a></li>
                 </ul>
               </li>
@@ -152,10 +152,8 @@
             <div class="ProfileCard u-cf">                        
             <div class="ProfileCard-avatar"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-airplay m-0"><path d="M5 17H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-1"></path><polygon points="12 15 17 21 7 21 12 15"></polygon></svg></div>
             <div class="ProfileCard-details">
-                <div class="ProfileCard-realName">{{user}}</div>
-               
-             
-
+                <div class="ProfileCard-realName">
+                  {{user}}
                 </div>
             </div>
           </script>
