--- a/FutureStar/FutureStar_App/templates/layouts/sidebar.html
+++ b/FutureStar/FutureStar_App/templates/layouts/sidebar.html
@@ -18,7 +18,7 @@
       </div>
       <div class="logo-icon-wrapper">
          <a href="#">
-            <img class="img-fluid" src="{{ fav_icon }}" alt="">
+            <img class="img-fluid" src="{{ fav_icon }}" style="width: 35px; height: 35px;" alt="">
          </a>
       </div>
       <nav class="sidebar-main">
@@ -29,7 +29,7 @@
             <ul class="sidebar-links" id="simple-bar">
                <li class="back-btn">
                   <a href="#">
-                     <img class="img-fluid" src="{% static 'assets/images/logo/logo-icon.png' %}" alt="">
+                     <img class="img-fluid" {{ fav_icon }}" style="width: 35px; height: 35px;" alt="">
                   </a>
                   <div class="mobile-back text-end">
                      <span>Back</span>
